--- a/client/react/.babelrc
+++ b/client/react/.babelrc
@@ -1,7 +1,13 @@
 {
-    "presets": [
-      "es2015",
-      "react"
-    ],
-    "plugins": []
+  "presets": [
+    "es2015",
+    "react",
+    "env"
+  ],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  },
+  "plugins": ["transform-decorators-legacy","transform-class-properties"]
 }
