--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "ejs": "*",
     "express": "~4.13.1",
     "express-session": "*",
-    "mobx": "^4.2.1",
-    "mobx-react": "^5.1.2",
     "socket.io": "^1.4.8",
-    "mobx": "^4.2.1",
-    "mobx-react": "^5.1.2",
-
+    "mysql": "^2.17.0"
   }
 }
