--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "express-session": "*",
     "socket.io": "^1.4.8",
     "mysql": "^2.17.0"
+  },
+  "scripts": {
+    "reload": "git pull;forever restart app.js"
   }
 }
